added blog links to base.html

--- a/template_integrated_code/app/templates/base.html
+++ b/template_integrated_code/app/templates/base.html
@@ -68,7 +68,10 @@
                     <li><a href="courses.html">Courses</a></li>
                     <li><a href="{{url_for('login')}}">Login</a></li>
                     <li><a href="{{url_for('logout')}}">Logout</a></li>
-                    
+                    <li> &nbsp&nbsp<a href="/blog/"> Blog </a> </li>
+<!--                    <li> &nbsp&nbsp<a href="/blog/sitemap.xml">Sitemap</a> </li>
+<li> &nbsp&nbsp<a href="/blog/feeds/all.atom.xml">ATOM</a> </li> <-->
+                    <li> &nbsp&nbsp<a href="/fileupload/">FileUpload</a></li>
                     
                     <li class="menu-has-children"><a href="">Blog</a>
                       <ul>
