--- a/template/TeachUs/scss/bootstrap/_mixins.scss
+++ b/template/TeachUs/scss/bootstrap/_mixins.scss
@@ -5,7 +5,7 @@
 // Utilities
 @import "mixins/breakpoints";
 @import "mixins/hover";
-@import "mixins/image";
+@import "mixins/static/image";
 @import "mixins/badge";
 @import "mixins/resize";
 @import "mixins/screen-reader";
