--- a/TeachUs/scss/bootstrap.scss
+++ b/TeachUs/scss/bootstrap.scss
@@ -11,7 +11,7 @@
 @import "bootstrap/print";
 @import "bootstrap/reboot";
 @import "bootstrap/type";
-@import "bootstrap/static/images";
+@import "bootstrap/static/imgs";
 @import "bootstrap/code";
 @import "bootstrap/grid";
 @import "bootstrap/tables";
