--- a/template_integrated_code/app/templates/index.html
+++ b/template_integrated_code/app/templates/index.html
@@ -18,7 +18,7 @@
 								
 							</p>
 							<p><b>TeachUs is there to help you!</b></p>
-							<a href="about.html" class="primary-btn text-uppercase">Get the help</a>
+							<a href="{{url_for('resources')}}" class="primary-btn text-uppercase">Get the help</a>
 						</div>										
 					</div>
 				</div>					
@@ -38,7 +38,7 @@
 									<p>
 										 A great guide to get you stated with your first online class.Don't be afraid we are with.Don't miss this oppourtunity.
 									</p>
-									<a href="resource_lib.html">Join now</a>									
+									<a href="{{url_for('resources')}}">Join now</a>									
 								</div>
 							</div>
 						</div>
@@ -51,7 +51,7 @@
 									<p>
 										Education is a ‘sharing’ field and so these connections could prove invaluable to your online educator development.Great opportunity to connect with other online educators expert and teachers just like you.
 									</p>
-									<a href="blog-home.html">Join Now</a>									
+									<a href="{{url_for('login')}}">Join Now</a>									
 								</div>
 							</div>
 						</div>
@@ -94,18 +94,17 @@
 									</div>
 									<div class="meta d-flex justify-content-between">
 										<p><span class="lnr lnr-users"></span> 355 <span class="lnr lnr-bubble"></span>35</p>
-										<h4>$150</h4>
+				
 									</div>									
 								</div>
 								<div class="details">
-									<a href="#">
+									<a href="{{url_for('resources1')}}">
 										<h4>
-											Learn Designing
+											10 Things To Know Before Your First Online Class
 										</h4>
 									</a>
 									<p>
-										When television was young, there was a hugely popular show based on the still popular fictional characte										
-									</p>
+										Some important points to keep in mind to get you started with your first zoom class.									</p>
 								</div>
 							</div>	
 							<div class="single-popular-carusel">
@@ -116,18 +115,17 @@
 									</div>
 									<div class="meta d-flex justify-content-between">
 										<p><span class="lnr lnr-users"></span> 355 <span class="lnr lnr-bubble"></span>35</p>
-										<h4>$150</h4>
+										
 									</div>									
 								</div>
 								<div class="details">
-									<a href="#">
+									<a href="{{url_for('resources2')}}">
 										<h4>
-											Learn React js beginners
+											How to deal with unruly tudents in online classes
 										</h4>
 									</a>
 									<p>
-										When television was young, there was a hugely popular show based on the still popular fictional characte										
-									</p>
+A few must know features in popular online class platforms									</p>
 								</div>
 							</div>	
 							<div class="single-popular-carusel">
