--- a/template_integrated_code/app/templates/resources2.html
+++ b/template_integrated_code/app/templates/resources2.html
@@ -1,58 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-		  <header id="header" id="home">
-	  		<div class="header-top">
-	  			<div class="container">
-			  		<div class="row">
-			  			<div class="col-lg-6 col-sm-6 col-8 header-top-left no-padding">
-			  				<ul>
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-telegram"></i></a></li>
-								
-			  				</ul>			
-			  			</div>
-			  			
-			  		</div>			  					
-	  			</div>
-			</div>
-		    <div class="container main-menu">
-		    	<div class="row align-items-center justify-content-between d-flex">
-			      <div id="logo">
-					  
-							<h1>
-								<b>TeachUs</b>	
-							</h1>
-			       
-			      </div>
-			      <nav id="nav-menu-container">
-			        <ul class="nav-menu">
-			          <li><a href="index.html">Home</a></li>
-			          <li><a href="about.html">About</a></li>
-			          <li><a href="courses.html">Courses</a></li>
-			          
-			          
-			          <li class="menu-has-children"><a href="">Blog</a>
-			            <ul>
-			              <li><a href="blog-home.html">Blog Home</a></li>
-			              <li><a href="blog-single.html">Blog Single</a></li>
-			            </ul>
-			          </li>	
-			          <li class="menu-has-children"><a href="">Pages</a>
-			            <ul>
-		              		<li><a href="course-details.html">Course Details</a></li>		
-		              			
-			                
-					          				                		
-			            </ul>
-			          </li>					          					          		          
-			          
-			        </ul>
-			      </nav><!-- #nav-menu-container -->		    		
-		    	</div>
-		    </div>
-		  </header><!-- #header -->
+
 			<!-- start banner Area -->
 			<section class="banner-area relative" id="home">	
 				<div class="overlay overlay-bg"></div>
@@ -60,9 +9,8 @@
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content col-lg-12">
 							<h1 class="text-white">
-								Blog Details Page				
-							</h1>	
-							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span><a href="blog-home.html">Blog </a> <span class="lnr lnr-arrow-right"></span> <a href="blog-single.html"> Blog Details Page</a></p>
+								How to deal with misbehaviour in online classes						</h1>	
+							<p class="text-white link-nav"><a href="#">Srishti,  </a>  <a href="#">, 09 Aug 2020 </a>  <a href="#"> New Delhi</a></p>
 						</div>	
 					</div>
 				</div>
@@ -82,16 +30,16 @@
 								</div>
 								<div class="col-lg-3  col-md-3 meta-details">
 									<ul class="tags">
-										<li><a href="#">Food,</a></li>
+										<li><a href="#">Zoom,</a></li>
+										<li><a href="#">Google Meet,</a></li>
 										<li><a href="#">Technology,</a></li>
-										<li><a href="#">Politics,</a></li>
-										<li><a href="#">Lifestyle</a></li>
+										<li><a href="#">Online Classes</a></li>
 									</ul>
 									<div class="user-details row">
-										<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">Mark wiens</a> <span class="lnr lnr-user"></span></p>
-										<p class="date col-lg-12 col-md-12 col-6"><a href="#">12 Dec, 2017</a> <span class="lnr lnr-calendar-full"></span></p>
-										<p class="view col-lg-12 col-md-12 col-6"><a href="#">1.2M Views</a> <span class="lnr lnr-eye"></span></p>
-										<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span class="lnr lnr-bubble"></span></p>
+										<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">Srishti</a> <span class="lnr lnr-user"></span></p>
+										<p class="date col-lg-12 col-md-12 col-6"><a href="#">09 Aug, 2020</a> <span class="lnr lnr-calendar-full"></span></p>
+										<p class="view col-lg-12 col-md-12 col-6"><a href="#">pinned</a> <span class="lnr lnr-eye"></span></p>
+										<p class="comments col-lg-12 col-md-12 col-6"><a href="#">New Delhi</a> <span class="lnr lnr-bubble"></span></p>
 										<ul class="social-links col-lg-12 col-md-12 col-6">
 											<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 											<li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -101,7 +49,6 @@
 									</div>
 								</div>
 								<div class="col-lg-9 col-md-9">
-									<h3 class="mt-20 mb-20">HOW TO DEAL WITH MISBEHAVIOUR IN ONLINE CLASSES</h3>
 									<p class="excert">
 										The Pandemic has drastically changed the classroom experience of both the teachers and the students. Technology is indeed a boon in times like these, the very fact that despite the pandemic a lot of people have managed to adapt to online classrooms seamlessly however fact remains that this shift has not been easy. A lot of people lack the resources to access these online platforms, even if they manage to access these resources, it becomes a major challenge for them to actually use these resources. From unstable internet classrooms to unruly children, these online classes are indeed wrought with difficulties.									</p>
 									<p>
