Integrated chatbot with site

--- a/template_integrated_code/app/templates/base.html
+++ b/template_integrated_code/app/templates/base.html
@@ -63,9 +63,10 @@
                 </div>
                 <nav id="nav-menu-container">
                   <ul class="nav-menu">
-                    <li><a href="{{url_for('index')}}">Home</a></li>
-                    <li><a href="{{url_for('about')}}">About</a></li>
-                    <li><a href="{{url_for('resources')}}">Resource Library</a></li>
+					<li><a href="{{url_for('index')}}">Home</a></li>
+					<li><a href="{{url_for('bot')}}">ChatBot</a></li>
+					<li><a href="{{url_for('resources')}}">Resource Library</a></li>
+					<li><a href="{{url_for('about')}}">About</a></li>
                     {% if current_user.is_authenticated %}
                     <li><a href="{{url_for('logout')}}">Logout</a></li>
                     {% else %}
