--- a/template_integrated_code/app/templates/index.html
+++ b/template_integrated_code/app/templates/index.html
@@ -19,6 +19,7 @@
 							</p>
 							<p><b>TeachUs is there to help you!</b></p>
 							<a href="{{url_for('resources')}}" class="primary-btn text-uppercase">Get the help</a>
+							<a href="{{url_for('bot')}}" class="primary-btn text-uppercase">Interact with bot</a>
 						</div>										
 					</div>
 				</div>					
@@ -438,7 +439,7 @@ A few must know features in popular online class platforms									</p>
 								</p>
 							</div>
 							<div class="single-review item">
-								<img src="static/img/r1.png" alt="">
+								<img src="static/img/p3.jpg" alt="">
 								<div class="title justify-content-start d-flex">
 									<a href="#"><h4>Fannie Rowe</h4></a>
 									<div class="star">
