Added new article in webpage

--- a/template_integrated_code/app/templates/index.html
+++ b/template_integrated_code/app/templates/index.html
@@ -137,17 +137,16 @@ A few must know features in popular online class platforms									</p>
 									</div>
 									<div class="meta d-flex justify-content-between">
 										<p><span class="lnr lnr-users"></span> 355 <span class="lnr lnr-bubble"></span>35</p>
-										<h4>$150</h4>
 									</div>									
 								</div>
 								<div class="details">
-									<a href="#">
+									<a href="{{url_for('resources3')}}">
 										<h4>
-											Learn Photography
+											Comparative analysis of popular online meeting platforms	
 										</h4>
 									</a>
 									<p>
-										When television was young, there was a hugely popular show based on the still popular fictional characte										
+										We make the task of selecting the correct online platform easy for you by compliting a list of features that set each of these platforms apart.                        </p>
 									</p>
 								</div>
 							</div>	
