--- a/template_integrated_code/app/templates/resources.html
+++ b/template_integrated_code/app/templates/resources.html
@@ -80,27 +80,29 @@ Some important points to keep in mind to get you started with your first zoom cl
                 <div class="single-post row">
                     <div class="col-lg-3 col-md-3 meta-details">
                         <ul class="tags">
-                            <li><a href="#">Food,</a></li>
-                            <li><a href="#">Technology,</a></li>
-                            <li><a href="#">Politics,</a></li>
-                            <li><a href="#">Lifestyle</a></li>
+                            <li><a href="#">Zoom,</a></li>
+                            <li><a href="#">webex,</a></li>
+                            <li><a href="#">Microsoft teams,</a></li>
+                            <li><a href="#">Google Classroom</a></li>
+                            <li><a href="#">GoTo meetings,</a></li>
+                            <li><a href="#">Blue Jeans,</a></li>
+
                         </ul>
                         <div class="user-details row">
-                            <p class="user-name col-lg-12 col-md-12 col-6"><a href="#">Mark wiens</a> <span class="lnr lnr-user"></span></p>
-                            <p class="date col-lg-12 col-md-12 col-6"><a href="#">12 Dec, 2017</a> <span class="lnr lnr-calendar-full"></span></p>
-                            <p class="view col-lg-12 col-md-12 col-6"><a href="#">1.2M Views</a> <span class="lnr lnr-eye"></span></p>
-                            <p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span class="lnr lnr-bubble"></span></p>						
+                            <p class="user-name col-lg-12 col-md-12 col-6"><a href="#">Sachita</a> <span class="lnr lnr-user"></span></p>
+                            <p class="date col-lg-12 col-md-12 col-6"><a href="#">09 Aug, 2020</a> <span class="lnr lnr-calendar-full"></span></p>
+                            <p class="view col-lg-12 col-md-12 col-6"><a href="#">pinned</a> <span class="lnr lnr-eye"></span></p>
+                            <p class="comments col-lg-12 col-md-12 col-6"><a href="#">New Delhi</a> <span class="lnr lnr-bubble"></span></p>						
                         </div>
                     </div>
                     <div class="col-lg-9 col-md-9">
                         <div class="feature-img">
                             <img class="img-fluid" src="static/img/blog/feature-img5.jpg" alt="">
                         </div>
-                        <a class="posts-title" href="blog-single.html"><h3>Telescopes 101</h3></a>
+                        <a class="posts-title" href="{{url_for('resources3')}}"><h3>	Comparative analysis of popular online meeting platforms	</h3></a>
                         <p class="excert">
-                            MCSE boot camps have its supporters and its detractors. Some people do not understand why you should have to spend money on boot camp when you can get the MCSE study materials yourself at a fraction.
-                        </p>
-                        <a href="blog-single.html" class="primary-btn">View More</a>
+We make the task of selecting the correct online platform easy for you by compliting a list of features that set each of these platforms apart.                        </p>
+                        <a href="{{url_for('resources3')}}" class="primary-btn">View More</a>
                     </div>
                 </div>														
                 <nav class="blog-pagination justify-content-center d-flex">
@@ -112,11 +114,9 @@ Some important points to keep in mind to get you started with your first zoom cl
                                 </span>
                             </a>
                         </li>
-                        <li class="page-item"><a href="#" class="page-link">01</a></li>
-                        <li class="page-item active"><a href="#" class="page-link">02</a></li>
-                        <li class="page-item"><a href="#" class="page-link">03</a></li>
-                        <li class="page-item"><a href="#" class="page-link">04</a></li>
-                        <li class="page-item"><a href="#" class="page-link">09</a></li>
+                        <li class="page-item active"><a href="#" class="page-link">01</a></li>
+                        <li class="page-item"><a href="#" class="page-link">02</a></li>
+                
                         <li class="page-item">
                             <a href="#" class="page-link" aria-label="Next">
                                 <span aria-hidden="true">
