Added finishing touches to webpage

--- a/template_integrated_code/app/templates/base.html
+++ b/template_integrated_code/app/templates/base.html
@@ -64,7 +64,7 @@
                 <nav id="nav-menu-container">
                   <ul class="nav-menu">
 					<li><a href="{{url_for('index')}}">Home</a></li>
-					<li><a href="{{url_for('bot')}}">ChatBot</a></li>
+					<li><a href="{{url_for('homework')}}">ChatBot</a></li>
 					<li><a href="{{url_for('resources')}}">Resource Library</a></li>
 					<li><a href="{{url_for('about')}}">About</a></li>
                     {% if current_user.is_authenticated %}
