--- a/template_integrated_code/app/templates/resources.html
+++ b/template_integrated_code/app/templates/resources.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="col-lg-9 col-md-9 ">
                         <div class="feature-img">
-                            <img class="img-fluid" src="static/img/blog/feature-img1.jpg" alt="">
+                            <img class="img-fluid" src="static/img/blog/p1.jpg" alt="">
                         </div>
                         <a class="posts-title" href="{{url_for('resources1')}}"><h3>10 Thing to know before your first online class</h3></a>
                         <p class="excert">
@@ -68,7 +68,7 @@ Some important points to keep in mind to get you started with your first zoom cl
                     </div>
                     <div class="col-lg-9 col-md-9 ">
                         <div class="feature-img">
-                            <img class="img-fluid" src="static/img/blog/feature-img2.jpg" alt="">
+                            <img class="img-fluid" src="static/img/blog/p2.jpg" alt="">
                         </div>
                         <a class="posts-title" href="{{url_for('resources2')}}"><h3>How to deal with unruly students in online classes</h3></a>
                         <p class="excert">
@@ -97,7 +97,7 @@ Some important points to keep in mind to get you started with your first zoom cl
                     </div>
                     <div class="col-lg-9 col-md-9">
                         <div class="feature-img">
-                            <img class="img-fluid" src="static/img/blog/feature-img5.jpg" alt="">
+                            <img class="img-fluid" src="static/img/blog/p3.png" alt="">
                         </div>
                         <a class="posts-title" href="{{url_for('resources3')}}"><h3>	Comparative analysis of popular online meeting platforms	</h3></a>
                         <p class="excert">
