--- a/template_integrated_code/app/templates/resources1.html
+++ b/template_integrated_code/app/templates/resources1.html
@@ -26,7 +26,7 @@
 							<div class="single-post row">
 								<div class="col-lg-12">
 									<div class="feature-img">
-										<img class="img-fluid" src="static/img/blog/feature-img1.jpg" alt="">
+										<img class="img-fluid" src="static/img/blog/p1.jpg" alt="">
 									</div>									
 								</div>
 								<div class="col-lg-3  col-md-3 meta-details">
@@ -73,18 +73,7 @@
 											<p> The most important mantra to keep in mind! Be it Zoom, Google Meet or Microsoft Teams, you must know the platform. Be sure of what button to press to share your screen, how to mute participants and other basic controls. This would go a long way in making your first online class a major success! </p> </li>
 											
 									</ol>
-								</div>
-								
-									<div class="row mt-30 mb-30">
-										<div class="col-6">
-											<img class="img-fluid" src="static/img/blog/post-img1.jpg" alt="">
-										</div>
-										<div class="col-6">
-											<img class="img-fluid" src="static/img/blog/post-img2.jpg" alt="">
-										</div>	
-														
-									</div>
-								</div>
+					
 							</div>
 							
 							
