--- a/template_integrated_code/app/templates/resources2.html
+++ b/template_integrated_code/app/templates/resources2.html
@@ -25,7 +25,7 @@
 							<div class="single-post row">
 								<div class="col-lg-12">
 									<div class="feature-img">
-										<img class="img-fluid" src="static/img/blog/feature-img1.jpg" alt="">
+										<img class="img-fluid" src="static/img/blog/p2.jpg" alt="">
 									</div>									
 								</div>
 								<div class="col-lg-3  col-md-3 meta-details">
@@ -72,18 +72,7 @@
 											<li><h5>Remove distractions and background noises</h5>Click on the 3-dot icon at the bottom right, select ‘Settings’, and click on the ‘Noise cancellation’ toggle. This filters out any noise that isn’t that of a person talking. This feature can come in handy for removing unruly noises and disturbances in the classroom.</li>
 											<li><h5>Mute attendees</h5>Mute students in the meeting by going to the ‘People’ tab at the top right corner of your Google Meet screen, clicking on the down-arrow adjacent to a student’s name, and hitting the microphone button to mute their microphone</li>
 										</ol>
-								</div>
 								
-									<div class="row mt-30 mb-30">
-										<div class="col-6">
-											<img class="img-fluid" src="static/img/blog/post-img1.jpg" alt="">
-										</div>
-										<div class="col-6">
-											<img class="img-fluid" src="static/img/blog/post-img2.jpg" alt="">
-										</div>	
-														
-									</div>
-								</div>
 							</div>
 							
 							
