--- a/template_integrated_code/app/templates/about.html
+++ b/template_integrated_code/app/templates/about.html
@@ -25,9 +25,14 @@
 						<div class="col-lg-8 posts-list">
 							<div class="single-post row">
 								<div class="col-lg-12">
-									<div class="feature-img">
-										<img class="img-fluid" src="static/img/blog/feature-img1.jpg" alt="">
-									</div>									
+									<div class="row mt-30 mb-30">
+										<div class="col-6">
+											<img class="img-fluid" src="static/img/blog/group.jpeg" alt="">
+										</div>
+				
+														
+									</div>
+												
 								
 								<div class="col-lg-9 col-md-9">
 									
@@ -49,15 +54,7 @@
 								<br>
 								</div>
 								
-									<div class="row mt-30 mb-30">
-										<div class="col-6">
-											<img class="img-fluid" src="static/img/blog/post-img1.jpg" alt="">
-										</div>
-										<div class="col-6">
-											<img class="img-fluid" src="static/img/blog/post-img2.jpg" alt="">
-										</div>	
-														
-									</div>
+									
 								</div>
 							</div>
 							
