--- a/template_integrated_code/app/templates/index.html
+++ b/template_integrated_code/app/templates/index.html
@@ -19,7 +19,7 @@
 							</p>
 							<p><b>TeachUs is there to help you!</b></p>
 							<a href="{{url_for('resources')}}" class="primary-btn text-uppercase">Get the help</a>
-							<a href="{{url_for('bot')}}" class="primary-btn text-uppercase">Interact with bot</a>
+							<a href="{{url_for('homework')}}" class="primary-btn text-uppercase">Interact with bot</a>
 						</div>										
 					</div>
 				</div>					
@@ -91,7 +91,7 @@
 								<div class="thumb-wrap relative">
 									<div class="thumb relative">
 										<div class="overlay overlay-bg"></div>	
-										<img class="img-fluid" src="static/img/p1.jpg" alt="">
+										<img class="img-fluid" src="static/img/blog/p1.jpg" alt="">
 									</div>
 									<div class="meta d-flex justify-content-between">
 										<p><span class="lnr lnr-users"></span> 355 <span class="lnr lnr-bubble"></span>35</p>
@@ -112,7 +112,7 @@
 								<div class="thumb-wrap relative">
 									<div class="thumb relative">
 										<div class="overlay overlay-bg"></div>	
-										<img class="img-fluid" src="static/img/p2.jpg" alt="">
+										<img class="img-fluid" src="static/img/blog/p2.jpg" alt="">
 									</div>
 									<div class="meta d-flex justify-content-between">
 										<p><span class="lnr lnr-users"></span> 355 <span class="lnr lnr-bubble"></span>35</p>
@@ -122,7 +122,7 @@
 								<div class="details">
 									<a href="{{url_for('resources2')}}">
 										<h4>
-											How to deal with unruly tudents in online classes
+											How to deal with unruly students in online classes
 										</h4>
 									</a>
 									<p>
@@ -133,7 +133,7 @@ A few must know features in popular online class platforms									</p>
 								<div class="thumb-wrap relative">
 									<div class="thumb relative">
 										<div class="overlay overlay-bg"></div>	
-										<img class="img-fluid" src="static/img/p3.jpg" alt="">
+										<img class="img-fluid" src="static/img/blog/p3.png" alt="">
 									</div>
 									<div class="meta d-flex justify-content-between">
 										<p><span class="lnr lnr-users"></span> 355 <span class="lnr lnr-bubble"></span>35</p>
@@ -150,116 +150,7 @@ A few must know features in popular online class platforms									</p>
 									</p>
 								</div>
 							</div>	
-							<div class="single-popular-carusel">
-								<div class="thumb-wrap relative">
-									<div class="thumb relative">
-										<div class="overlay overlay-bg"></div>	
-										<img class="img-fluid" src="static/img/p4.jpg" alt="">
-									</div>
-									<div class="meta d-flex justify-content-between">
-										<p><span class="lnr lnr-users"></span> 355 <span class="lnr lnr-bubble"></span>35</p>
-										<h4>$150</h4>
-									</div>									
-								</div>
-								<div class="details">
-									<a href="#">
-										<h4>
-											Learn Surveying
-										</h4>
-									</a>
-									<p>
-										When television was young, there was a hugely popular show based on the still popular fictional characte										
-									</p>
-								</div>
-							</div>
-							<div class="single-popular-carusel">
-								<div class="thumb-wrap relative">
-									<div class="thumb relative">
-										<div class="overlay overlay-bg"></div>	
-										<img class="img-fluid" src="static/img/p1.jpg" alt="">
-									</div>
-									<div class="meta d-flex justify-content-between">
-										<p><span class="lnr lnr-users"></span> 355 <span class="lnr lnr-bubble"></span>35</p>
-										<h4>$150</h4>
-									</div>									
-								</div>
-								<div class="details">
-									<a href="#">
-										<h4>
-											Learn Designing
-										</h4>
-									</a>
-									<p>
-										When television was young, there was a hugely popular show based on the still popular fictional characte										
-									</p>
-								</div>
-							</div>	
-							<div class="single-popular-carusel">
-								<div class="thumb-wrap relative">
-									<div class="thumb relative">
-										<div class="overlay overlay-bg"></div>	
-										<img class="img-fluid" src="static/img/p2.jpg" alt="">
-									</div>
-									<div class="meta d-flex justify-content-between">
-										<p><span class="lnr lnr-users"></span> 355 <span class="lnr lnr-bubble"></span>35</p>
-										<h4>$150</h4>
-									</div>									
-								</div>
-								<div class="details">
-									<a href="#">
-										<h4>
-											Learn React js beginners
-										</h4>
-									</a>
-									<p>
-										When television was young, there was a hugely popular show based on the still popular fictional characte										
-									</p>
-								</div>
-							</div>	
-							<div class="single-popular-carusel">
-								<div class="thumb-wrap relative">
-									<div class="thumb relative">
-										<div class="overlay overlay-bg"></div>	
-										<img class="img-fluid" src="static/img/p3.jpg" alt="">
-									</div>
-									<div class="meta d-flex justify-content-between">
-										<p><span class="lnr lnr-users"></span> 355 <span class="lnr lnr-bubble"></span>35</p>
-										<h4>$150</h4>
-									</div>									
-								</div>
-								<div class="details">
-									<a href="#">
-										<h4>
-											Learn Photography
-										</h4>
-									</a>
-									<p>
-										When television was young, there was a hugely popular show based on the still popular fictional characte										
-									</p>
-								</div>
-							</div>	
-							<div class="single-popular-carusel">
-								<div class="thumb-wrap relative">
-									<div class="thumb relative">
-										<div class="overlay overlay-bg"></div>	
-										<img class="img-fluid" src="static/img/p4.jpg" alt="">
-									</div>
-									<div class="meta d-flex justify-content-between">
-										<p><span class="lnr lnr-users"></span> 355 <span class="lnr lnr-bubble"></span>35</p>
-										<h4>$150</h4>
-									</div>									
-								</div>
-								<div class="details">
-									<a href="#">
-										<h4>
-											Learn Surveying
-										</h4>
-									</a>
-									<p>
-										When television was young, there was a hugely popular show based on the still popular fictional characte										
-									</p>
-								</div>
-							</div>							
+												
 						</div>
 					</div>
 				</div>	
@@ -311,7 +202,7 @@ A few must know features in popular online class platforms									</p>
 							</div>	
 							<div class="single-carusel row align-items-center">
 								<div class="col-12 col-md-6 thumb">
-									<img class="img-fluid" src="static/img/mhrd.jpg" alt="">
+									<img class="img-fluid" src="static/img/zoom.jpg" alt="">
 								</div>
 								<div class="detials col-12 col-md-6">
 									<p>15 August , 2020</p>
@@ -323,7 +214,7 @@ A few must know features in popular online class platforms									</p>
 							</div>	
 							<div class="single-carusel row align-items-center">
 								<div class="col-12 col-md-6 thumb">
-									<img class="img-fluid" src="static/img/mhrd.jpg" alt="">
+									<img class="img-fluid" src="static/img/yoga.png" alt="">
 								</div>
 								<div class="detials col-12 col-md-6">
 									<p>30-31 August, 2020</p>
@@ -379,6 +270,5 @@ A few must know features in popular online class platforms									</p>
 
 <!--------------------------------------------------------------------------------------------------------------------------------------------------->
 
-<p> We aim to create a community of teachers helping teachers get familiar with the world of online teaching in these trying times of COVID-19. </p>
 
 {% endblock %}
