--- a/template_integrated_code/app/templates/resources3.html
+++ b/template_integrated_code/app/templates/resources3.html
@@ -26,7 +26,7 @@
 							<div class="single-post row">
 								<div class="col-lg-12">
 									<div class="feature-img">
-										<img class="img-fluid" src="static/img/blog/feature-img1.jpg" alt="">
+										<img class="img-fluid" src="static/img/blog/p3.png" alt="">
 									</div>									
 								</div>
 								<div class="col-lg-3  col-md-3 meta-details">
@@ -58,18 +58,6 @@
 											<li><img class="img-fluid" src="static/img/table5.PNG" alt=""></li>
 											<li><img class="img-fluid" src="static/img/table6.PNG" alt=""></li>
 									</ol>
-								</div>
-								
-									<div class="row mt-30 mb-30">
-										<div class="col-6">
-											<img class="img-fluid" src="static/img/blog/post-img1.jpg" alt="">
-										</div>
-										<div class="col-6">
-											<img class="img-fluid" src="static/img/blog/post-img2.jpg" alt="">
-										</div>	
-														
-									</div>
-								</div>
 							</div>
 							
 							
