Added community in nav bar

--- a/template_integrated_code/app/templates/base.html
+++ b/template_integrated_code/app/templates/base.html
@@ -72,7 +72,7 @@
                     {% else %}
                     <li><a href="{{url_for('login')}}">Login</a></li>
                     {% endif %}
-                    <li> &nbsp&nbsp<a href="/blog/"> Blog </a> </li>
+                    <li> &nbsp&nbsp<a href="/blog/"> Community </a> </li>
 <!--                    <li> &nbsp&nbsp<a href="/blog/sitemap.xml">Sitemap</a> </li>
 <li> &nbsp&nbsp<a href="/blog/feeds/all.atom.xml">ATOM</a> </li> <-->
                     <li> &nbsp&nbsp<a href="/fileupload/">FileUpload</a></li>
